# blackstar

./: .gitignore  LICENSE  README.md  blackstar.cabal  cabal.config  stack.yaml
animations/: default-ani.yaml
app/: Animate.hs  GenerateStarMap.hs  GenerateTree.hs  Main.hs
kdt-0.2.3/: LICENSE  changelog.md  kdt.cabal
kdt-0.2.3/app-src/Benchmarks/: KDTBenchmark.hs
kdt-0.2.3/app-src/Data/: Point2d.hs
kdt-0.2.3/app-src/Tests/: DynamicTest.hs  StaticTest.hs
kdt-0.2.3/lib-src/Data/KdMap/: Dynamic.hs  Static.hs
kdt-0.2.3/lib-src/Data/KdTree/: Dynamic.hs  Static.hs
scenes/: closeup-hires.yaml  closeup.yaml  default-aa.yaml  default-ani.yaml  default-hires.yaml  default.yaml  fartheraway.yaml  lensing-disk.yaml  lensing.yaml  lgg3-wallpaper.yaml  new-wallpaper.yaml  wideangle-disk.yaml  wideangle.yaml  wideangle1.yaml
scripts/: ffmpeg-animate
src/: Animation.hs  Color.hs  ConfigFile.hs  GR.hs  Geodesics.hs  Geometry.hs  ImageFilters.hs  ImageUtil.hs  Raytracer.hs  RaytracerFrontend.hs  StarMap.hs  StarMapLookup.hs  Util.hs
star-catalogs/: README.txt  entry-format.txt  header-format.txt
