name:                blackstar
version:             0.1.0.0
synopsis:            A black hole ray tracer
description:         A black hole ray tracer written in Haskell
homepage:            http://github.com/flannelhead/blackstar#readme
license:             BSD3
license-file:        LICENSE
author:              Sakari Kapanen
maintainer:          sakari.m.kapanen@gmail.com
copyright:           2017 Sakari Kapanen
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Raytracer
                     , StarMap
                     , ConfigFile
                     , ImageFilters
                     , Util
                     , Animation
  ghc-options:         -Wall
                       -Odph 
                       -funbox-strict-fields
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , lens
                     , bytestring
                     , cereal
                     , vector
                     , kdt
                     , yaml
                     , aeson
                     , directory
                     , hip
                     , JuicyPixels
                     , filepath
                     , time
                     , deepseq
  default-language:    Haskell2010

executable blackstar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:       base
                     , blackstar
                     , directory
                     , yaml
                     , bytestring
                     , cmdargs
                     , filepath
                     , ansi-terminal
                     , hip
  default-language:    Haskell2010

executable animate
  hs-source-dirs:      app
  main-is:             Animate.hs
  ghc-options:         -Wall
  build-depends:       base
                     , blackstar
                     , directory
                     , yaml
                     , bytestring
                     , cmdargs
                     , filepath
  default-language:    Haskell2010

executable generate-tree
  hs-source-dirs:      app
  main-is:             GenerateTree.hs
  ghc-options:         -Wall
  build-depends:       base
                     , blackstar
                     , directory
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flannelhead/blackstar
