name:                blackstar
version:             0.1.0.0
synopsis:            A black hole ray tracer
description:         A black hole ray tracer written in Haskell
homepage:            http://github.com/flannelhead/blackstar#readme
license:             BSD3
license-file:        LICENSE
author:              Sakari Kapanen
maintainer:          sakari.m.kapanen@gmail.com
copyright:           2019 Sakari Kapanen
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Raytracer
                     , StarMap
                     , StarMapLookup
                     , ConfigFile
                     , Util
                     , Animation
  ghc-options:         -Wall
                       -O2
  build-depends:       base >= 4.7 && < 5
                     , data-default
                     , accelerate
                     , accelerate-llvm-native
                     , accelerate-io-JuicyPixels
                     , colour-accelerate
                     , containers
                     , linear-accelerate
                     , linear
                     , lens
                     , bytestring
                     , cereal
                     , vector
                     , yaml
                     , aeson
                     , directory
                     , filepath
                     , time
                     , deepseq
                     , JuicyPixels
  default-language:    Haskell2010

executable blackstar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N -with-rtsopts=-n2M -with-rtsopts=-A64M
  build-depends:       base
                     , blackstar
                     , directory
                     , yaml
                     , bytestring
                     , cmdargs
                     , filepath
                     , ansi-terminal
  default-language:    Haskell2010

executable animate
  hs-source-dirs:      app
  main-is:             Animate.hs
  ghc-options:         -Wall
  build-depends:       base
                     , blackstar
                     , directory
                     , yaml
                     , bytestring
                     , cmdargs
                     , filepath
  default-language:    Haskell2010

executable generate-tree
  hs-source-dirs:      app
  main-is:             GenerateTree.hs
  ghc-options:         -Wall
  build-depends:       base
                     , blackstar
                     , directory
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flannelhead/blackstar
